fixed alignment when error

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -74,6 +74,7 @@
   color: #fff;
   padding: 20px 0;
   font-weight: bold;
+  vertical-align: top;
 }
 
 .well-list .well-list-item h2 {
